correct text alignment

--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ p {
     margin-bottom: 40px; 
 }
 
-#description p{
+.description > p{
     text-align:left;
 }
 } 
